[package]
name = "engine"
version = "0.1.1"
authors = ["Samuel Casavant <samuel.j.casavant@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0", optional = true }
bevy = { version = "0.5.0", features = [
    "bevy_wgpu",
    "x11",
    "png"
] } # , features = ["dynamic"] }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap.git", features = ["tiled_map"] }
indexmap = "1.7.0"
morton-encoding = "2.0"
pathfinding = "2.0.4"
rand = "0.8.4"
serde_json = { version = "1.0", optional = true }
tiled = { version = "0.9", default-features = false, optional = true }

## Debugging Dependencies:
bevy_screen_diags = "*"
bevy_console = "0.2.0" # { git = "https://github.com/RichoDemus/bevy-console.git"}
bevy_mod_debug_console = { git = "https://github.com/hymm/bevy_mod_debug_console.git"}
pretty_trace = {git = "https://github.com/10XGenomics/rust-toolbox.git"}
log = "0.4"
env_logger = "0.9"
#log4rs = {version = "1.0.0", features = ["file_appender"]}

[profile.release]
debug = true
lto = "thin"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[workspace.metadata.dylint]
libraries = [
  { git = "https://github.com/MinerSebas/bevy_lint", branch = "main" },
]
