[package]
name = "engine"
version = "0.1.1"
authors = ["Samuel Casavant <samuel.j.casavant@gmail.com>"]
edition = "2021"

[dependencies]
bevy = { version = "0.5.0" } # , features = ["dynamic"] }
pathfinding = "2.0.4"
rand = "0.8.4"

## Voxel Dependencies
dot_vox = "4.1.0"
palette = "0.6.0"
building-blocks = "0.7.1"

## Debugging Dependencies:
bevy_mod_debug_console = "0.0.2"
pretty_trace = {git = "https://github.com/10XGenomics/rust-toolbox.git"}
log = "0.4"
env_logger = "0.9"

[profile.release]
debug = true
lto = "thin"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[workspace.metadata.dylint]
libraries = [
  { git = "https://github.com/MinerSebas/bevy_lint", branch = "main" },
]
