[package]
name = "engine"
version = "0.1.0"
edition = "2018"
authors = ["Samuel Casavant <samuel.j.casavant@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5.0"}#, features = ["dynamic"] }
rand = "0.8.4" 
pathfinding = "2.0.4"
#bevy_ecs_tilemap = { path = "../../bevy_ecs_tilemap_bugfix/bevy_ecs_tilemap", features = ["tiled_map"] } 
bevy_ecs_tilemap = {git = "https://github.com/StarArawn/bevy_ecs_tilemap.git", features=["tiled_map"]}

anyhow = { version = "1.0", optional = true }
morton-encoding = "2.0"
log = "0.4"
serde_json = { version = "1.0", optional = true }
tiled = { version = "0.9", default-features = false, optional = true }